# UCXSync

./: .gitignore  ARCHITECTURE.md  BENCHMARK.md  BUILD.md  CHEATSHEET.md  INSTALL.md  LINUX.md  Makefile  ORANGEPI.md  PARALLELISM.md  QUICK-TEST.sh  QUICKSTART.md  README.md  README.ru.md  RISCV.md  STORAGE-ARCHITECTURE.md  TEST.md  TESTING-ON-LAPTOP.md  UNINSTALL-GUIDE.md  USB-SSD-GUIDE.md  config.example.yaml  config.instance-a.yaml  config.instance-b.yaml  config.orangepi.yaml  go.mod  go.sum  install-orangepi.sh  install.sh  setup-dualnic-routing.sh  setup-usb-automount.sh  ucxsync.service  ucxsync@.service  uninstall.sh
cmd/ucxsync/: commands.go  main.go
cpp/: CMakeLists.txt  README.md
cpp/include/: config.hpp
cpp/src/: main.cpp
cpp/src/config/: config.cpp
internal/config/: config.go  config_test.go
internal/ead/: parser.go  parser_test.go  processor.go  processor_test.go
internal/ead/testdata/: malformed_ead.xml  valid_ead.xml
internal/monitor/: monitor.go
internal/network/: network.go  network_test.go
internal/report/: report.go  report_test.go
internal/state/: state.go  state_test.go
internal/sync/: sync.go  sync_test.go
internal/web/: disk.go  disk_stub.go  server.go  server_test.go
pkg/models/: models.go
web/static/css/: style.css
web/static/js/: app.js
web/templates/: index.html
